Bug 121205 - chart: multiline chart title in presentation not supported
Summary: chart: multiline chart title in presentation not supported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-06 13:00 UTC by Vasily Melenchuk (CIB)
Modified: 2018-11-15 16:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Problematic testcase (41.92 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2018-11-06 13:02 UTC, Vasily Melenchuk (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2018-11-06 13:00:53 UTC
Description:
Given PPTX presentation chart title should be multiline

Steps to Reproduce:
Open attached presentation in Impress

Actual Results:
LO displays it as:
"FirslineSecondline
Thirdline"

Expected Results:
Title contains 3 lines as displayed in MS Word:
"Firsline
Secondline
Thirdline"


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Vasily Melenchuk (CIB) 2018-11-06 13:02:21 UTC
Created attachment 146358 [details]
Problematic testcase
Comment 2 Commit Notification 2018-11-07 08:42:27 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/57d4cd80dcaf01fe4897d79d89e906d355410243%5E%21

tdf#121205: Convert <a:br> to newline chars in chart title

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2018-11-08 11:28:00 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/a1ea94fde40b82d0ec7ec842bf44cdeeea676aca%5E%21

tdf#121205: Convert <a:br> to newline chars in chart title

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2018-11-15 16:41:02 UTC
Works as expected.

Verified on:
Version: 6.2.0.0.alpha1+
Build ID: 7eb71f84db2f2d9a6e79a42d25bb676cf1018a90
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-12_17:12:50
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded