tdf#121205: Convert <a:br> to newline chars in chart title

Reviewed-on: https://gerrit.libreoffice.org/62752
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 57d4cd80dcaf01fe4897d79d89e906d355410243)
Reviewed-on: https://gerrit.libreoffice.org/62990
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit a1ea94fde40b82d0ec7ec842bf44cdeeea676aca)

Change-Id: I43d14025c48878c5bc035d492623f4fc52426e5e