chart2/qa/extras/chart2import.cxx
@@ -109,6 +109,7 @@ public:
 
     void testTdf115107(); // import complex data point labels
     void testTdf115107_2(); // import complex data point labels in cobo charts with multiple data series
+    void testTdf121205();
 
     CPPUNIT_TEST_SUITE(Chart2ImportTest);
     CPPUNIT_TEST(Fdo60083);
@@ -172,6 +173,7 @@ public:
 
     CPPUNIT_TEST(testTdf115107);
     CPPUNIT_TEST(testTdf115107_2);
+    CPPUNIT_TEST(testTdf121205);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -1566,6 +1568,20 @@ void Chart2ImportTest::testTdf115107_2()
     CPPUNIT_ASSERT_EQUAL(chart2::DataPointCustomLabelFieldType::DataPointCustomLabelFieldType_SERIESNAME, aFields[2]->getFieldType());
     CPPUNIT_ASSERT_EQUAL(OUString("Line"), aFields[2]->getString());
 }
+
+void Chart2ImportTest::testTdf121205()
+{
+    load("/chart2/qa/extras/data/pptx/", "tdf121205.pptx");
+    Reference<chart2::XChartDocument> xChartDoc(getChartDocFromDrawImpress(0, 0), uno::UNO_QUERY);
+
+    uno::Reference<chart2::XTitled> xTitled(xChartDoc, uno::UNO_QUERY_THROW);
+    CPPUNIT_ASSERT_MESSAGE("chart doc does not have title", xTitled.is());
+    OUString aTitle = getTitleString(xTitled);
+
+    // We expect title splitted in 3 lines
+    CPPUNIT_ASSERT_EQUAL(OUString("Firstline\nSecondline\nThirdline"), aTitle);
+}
+
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Chart2ImportTest);
 
